--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "backend-dev": "npx nodemon --watch backend backend/index.js",
     "backend": "node backend/index.js"
   },
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": "react-app"
   },
